--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,50 @@
 /* CSS */
-
-html, body{
-	width: 100%; height: 100%;
-	margin: 0px; padding: 0px;
+body{
+	line-height: 0.5;
 }
-
-#mapid{
-	margin: 0px; padding: 0px;
-	width: 480px; height: 320px;
-	background-color: gray;
+header,#container{
+	margin: 0 auto 0 auto;
+	width: 700px;
+}
+header h1{
+	text-align: center;
+	margin-bottom: 60px;
+}
+main{
+	background-color: yellowgreen;
+	float: left;
+	color: white;
+}
+aside{
+	background-color: green;
+	float: right;
+	color: white;
+}
+#container main #mino{
+	text-align: center;
+	font-size: 300%;
+}
+#container main h2{
+	text-align: center;
+}
+#container main #weather_mark_1{
+	text-align: center;
+}
+#container main #weather_mark_1 img{
+	width: 300px;
+	height: 300px;
+}
+#container aside #weather_mark_2{
+	text-align: center;
+}
+#container aside #weather_mark_2 img{
+	width: 300px;
+	height: 300px;
+}
+#container aside #hida{
+	text-align: center;
+	font-size: 300%;
+}
+#container aside h2{
+	text-align: center;
 }
