--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,50 @@
 /* CSS */
-
-html, body{
-	width: 100%; height: 100%;
-	margin: 0px; padding: 0px;
+#container{
+	margin: 0 auto;
+	width: 700px;
 }
-
-#mapid{
-	margin: 0px; padding: 0px;
-	width: 480px; height: 320px;
-	background-color: gray;
+#container header{
+	background-color: aqua;
+	text-align: center;
+}
+#container h2{
+	text-align: center;
+}
+#container #warikan_keisan{
+	display: flex;
+	justify-content: space-around;
+}
+#container #result{
+	text-align: center;
+}
+#container #result span{
+	font-size: 200%;
+}
+#container #warikan_keisan input{
+	margin-top: 10px;
+	height: 30px;
+}
+#container #warikan_keisan span{
+	margin-top: 15px;
+}
+#container #btn{
+	text-align: center;
+}
+#container #btn .calculation{
+	width: 200px;
+	height: 50px;
+	font-size: 200%;
+	color: blue;
+}
+#container #btn .reset{
+	width: 200px;
+	height: 50px;
+	font-size: 200%;
+	color: red;
+}
+#container #btn .reset_goukei,.reset_ninzuu{
+	width: 400px;
+	height: 50px;
+	font-size: 200%;
+	color: red;
 }
