--- a/css/custom.css
+++ b/css/custom.css
@@ -10,18 +10,38 @@ html, body{
 	border-radius: 14px;
 }
 
-.container, .container-fluid{
-	border: 2px solid silver;
-	box-sizing: border-box;
+#logo-html{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_html.png");
+	background-position: center;
 }
 
-.row{
-	border: 2px solid gray;
-	box-sizing: border-box;
+#logo-css{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_css.png");
+	background-position: center;
 }
 
-.col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6,
-.col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
-	border: 2px dashed black;
-	box-sizing: border-box;
+#logo-javascript{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_javascript.png");
+	background-position: center;
+}
+
+#logo-jquery{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_jquery.png");
+	background-position: center;
+}
+
+#logo-bootstrap{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_bootstrap.png");
+	background-position: center;
+}
+
+#logo-vue{
+	width: 100%; height: 225px;
+	background-image: url("../images/logo_vue.png");
+	background-position: center;
 }
