--- a/css/custom.css
+++ b/css/custom.css
@@ -9,3 +9,87 @@ html, body{
 	margin: 0px 5px; padding: 0px;
 	border-radius: 14px;
 }
+
+#car-html{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_html.png");
+	background-position: center;
+	background-size: 30%;
+	background-color: orange;
+	background-repeat: no-repeat;
+}
+
+#car-css{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_css.png");
+	background-position: center;
+	background-size: 30%;
+	background-color: cornflowerblue;
+	background-repeat: no-repeat;
+}
+
+#car-javascript{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_javascript.png");
+	background-position: center;
+	background-size: 30%;
+	background-color: gold;
+	background-repeat: no-repeat;
+}
+
+#head-jquery{
+	width: 140px; height: 140px;
+	margin: 0 auto 0 auto;
+	border-radius: 70px;
+	background-image: url("../images/logo_jquery.png");
+	background-position: center;
+	background-size: cover;
+	background-color: silver;
+}
+
+#head-bootstrap{
+	width: 140px; height: 140px;
+	margin: 0 auto 0 auto;
+	border-radius: 70px;
+	background-image: url("../images/logo_bootstrap.png");
+	background-position: center;
+	background-size: cover;
+	background-color: silver;
+}
+
+#head-vue{
+	width: 140px; height: 140px;
+	margin: 0 auto 0 auto;
+	border-radius: 70px;
+	background-image: url("../images/logo_vue.png");
+	background-position: center;
+	background-size: cover;
+	background-color: silver;
+}
+
+#feature-html{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_html.png");
+	background-position: center;
+	background-size: 50%;
+	background-color: orange;
+	background-repeat: no-repeat;
+}
+
+#feature-css{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_css.png");
+	background-position: center;
+	background-size: 50%;
+	background-color: cornflowerblue;
+	background-repeat: no-repeat;
+}
+
+#feature-javascript{
+	width: 100%; height: 100%;
+	background-image: url("../images/bkg_javascript.png");
+	background-position: center;
+	background-size: 50%;
+	background-color: gold;
+	background-repeat: no-repeat;
+}
