--- a/css/custom.css
+++ b/css/custom.css
@@ -1,28 +1,18 @@
 /* CSS */
-
 html, body{
 	width: 100%; height: 100%;
 }
-
 .navbar-brand img{
 	width: 28px; height: auto;
 	margin: 0px 5px; padding: 0px;
 	border-radius: 14px;
 }
-
-.container, .container-fluid{
-/*	border: 2px solid silver;*/
-/*	box-sizing: border-box;*/
+#head-logo{
+	width: 140px; height: 140px;
+	margin: 0 auto 0 auto;
+	border-radius: 70px;
+	background-image: url("../images/logo.png");
+	background-position: center;
+	background-size: cover;
+	background-color: silver;
 }
-
-.row{
-/*	border: 2px solid gray;*/
-/*	box-sizing: border-box;*/
-}
-
-.col, .col-1, .col-2, .col-3, .col-4, .col-5, .col-6,
-.col-7, .col-8, .col-9, .col-10, .col-11, .col-12{
-/*	border: 2px dashed black;*/
-/*	box-sizing: border-box;*/
-}
-
